--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -9,7 +9,7 @@
     <h2 style="text-align: center;">Finance Tracker</h2>
     <div class="container">
         <h2>Login</h2>
-        <form method="get">
+        <form method="post" action="/login">
             <label for="username">Username: </label>
             <input type="text" name="username">
             
