--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -10,11 +10,13 @@
         <form method="get" action="/login">
             <button>Login</button>
         </form>
-        <form>
+        <form method="get" action="/register">
             <button>Register</button>
         </form>
     </nav>
-    <h2 style="text-align: center;">Finance Tracker</h2>  
+
+    <h2 style="text-align: center;">Finance Tracker</h2>
+    <h4 style="text-align: center;">Hello! {{ name }} </h4>
     <div style="display: flex; flex-direction:column; align-items: center; gap: 5px;">
         <form method="post" action="/add" style="margin-bottom: 10px;">
             <select name="categories">
@@ -49,13 +51,13 @@
             </form>
         </div>
 
-        {% for expense in collections %}
-            <ul class="expense">
-                <li>{{ expense['category'], expense['value'], expense['date'].strftime('%Y-%m-%d') }}</li>
-                <form method="post" action="{{ url_for('delete', id=expense['_id']) }}">
+        {% for exp in expense %}
+            <ul class="exp">
+                <li>{{ exp['category'], exp['value'], exp['date'].strftime('%Y-%m-%d') }}</li>
+                <form method="post" action="{{ url_for('delete', id=exp['_id']) }}">
                     <input type="submit" value="Delete">
                 </form>
-                <form method="post" action="{{ url_for('stage_update', id=expense['_id']) }}">
+                <form method="post" action="{{ url_for('stage_update', id=exp['_id']) }}">
                     <input type="submit" value="Update">
                 </form>
             </ul>
