added JWT authentication

--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -7,11 +7,8 @@
 </head>
 <body>
     <nav style="display: flex; justify-content: end; gap: 10px; margin-right: 15px;">
-        <form method="get" action="/login">
-            <button>Login</button>
-        </form>
-        <form method="get" action="/register">
-            <button>Register</button>
+        <form method="get" action="/logout">
+            <button>Logout</button>
         </form>
     </nav>
 
