--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -42,8 +42,17 @@
                 <input type="radio" name="filter" value="tmonth">
                 <label for="tmonth">Past 3 Months</label>
             
-                <input type="radio" name="filter" value="custom">
+                <input type="radio" name="filter" value="custom" id="custom">
                 <label for="custom">Custom</label>
+
+                <div id="custom_dates" style="display:none;">
+                    <label for="start_date">Start Date:</label>
+                    <input type="date" id="start_date" name="start_date">
+        
+                    <label for="end_date">End Date:</label>
+                    <input type="date" id="end_date" name="end_date">
+                </div>
+
                 <button type="submit">Confirm</button>
             </form>
         </div>
@@ -62,3 +71,19 @@
     </div>
 </body>
 </html>
+
+<script>
+    // Show/hide date pickers based on 'Custom' radio button
+    const radios = document.querySelectorAll('input[name="filter"]');
+    const customDates = document.getElementById('custom_dates');
+
+    radios.forEach(radio => {
+        radio.addEventListener('change', () => {
+            if (document.getElementById('custom').checked) {
+                customDates.style.display = 'block';
+            } else {
+                customDates.style.display = 'none';
+            }
+        });
+    });
+</script>
